[Prachi] | Issue Fixes: Center align Icon, Image render issue fix

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/index.scss
@@ -946,3 +946,7 @@ input[type="number"] {
   align-items: flex-start !important;
 }
 
+.icon-wrapper {
+  display: flex;
+  justify-content: center;
+}
